agentcfg: Implement ElasticsearchFetcher
ElasticsearchFetcher is always enabled. It runs a background goroutine
to poll Elasticsearch to refresh a agentcfg cache in memory and serves
fetch requests from the cache. If the query to Elasticsearch is not
successful, it will fallback to the existing behavior, which is to
serve fetch requests using on-demand kibana requests or through fleet
config.

During startup and when the cache is not ready, all agentcfg fetch
requests will be responded with 503. If no fallback is enabled and that
the ES search request fails, server will respond 403 to fetch requests,
which is the same as the existing behavior.

--- a/systemtest/approvals/TestAgentConfig.approved.json
+++ b/systemtest/approvals/TestAgentConfig.approved.json
@@ -30,6 +30,37 @@
                 "event": "metric",
                 "name": "metric"
             }
+        },
+        {
+            "@timestamp": "dynamic",
+            "agent_config_applied": 1,
+            "data_stream": {
+                "dataset": "apm.internal",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic"
+            },
+            "labels": {
+                "etag": "dynamic"
+            },
+            "metricset": {
+                "name": "agent_config"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            }
         }
     ]
 }
